# firefly-client-python

./: .gitignore  .gitmodules  README.md  pyproject.toml  pytest.ini  requirements.in  run_book.py  sandbox.py  tox.ini
.github/workflows/: publish_to_pypi.yml  security-pipeline.yml
examples/: 0.sample_usage.py  1.initializaiton.py  1.initialization.py  10.1.socket_readonly.py  10.sockets.py  10.socketsReadOnlyClient.py  10.sockets_read_only_client.py  11.sub_accounts.py  12.open-order-event.py  12.open_order_event.py  13-orderbook-updates.py  13.orderbook_updates.py  14. web_sockets.py  14.web_sockets.py  15.get_funding_history.py  16.listening_events_using_sub_account.py  17.1.get_orders_readonly.py  17.2.get_open_orders.py  17.2.get_orders_by_type.py  17.get_orders.py  17.get_orders_readonly.py  18.dms_api.py  19.Generate_readonly_token.py  2.balance.py  2.deposit_to_mb.py  2.user_info.py  20.close_position.py  3.balance.py  3.placing_orders.py  4.1.placing_stop_limit_orders.py  4.placing_orders.py  4.user_positions.py  5.adjusting_leverage.py  6.adjusting_margin.py  6.placing_orders.py  7.cancelling_orders.py  8.exchange_data.py  9.user_data.py  config.py  testing.py
examples/Sockets/: 1-listening_events.py  10-user_account_update.py  11-candle_sticks_update.py  12-order_settlement_requeue_update.py  2-orderbook_updates.py  3-market_data_update.py  4-market_health_update.py  5-exchange_health_update.py  6-recent_trade_update.py  7-user_order_update.py  8-user_position_update.py  9-user_trade_update.py  config.py
src/: Utils.py  api_service.py  constants.py  contract_abis.py  contracts.py  enumerations.py  enums.py  firefly_exchange_client.py  interfaces.py  onboarding_signer.py  order_signer.py  sockets.py  utilities.py  utils.py  websocket_client.py
src/abi/: USDC.json
src/classes/: Order.py  OrderSigner.py  (+9 more)
tests/: test_utilities.py
(+18 files in other folders)
