[project]
name = "firefly_exchange_client"
version = "0.1.2"
description = "Library to interact with firefly exchange protocol including its off-chain api-gateway and on-chain contracts"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["firefly", "exchange", "decentralized", "perpetuals", "blockchain"]
dependencies = [
  'web3 ~= 5.31.3',
  'requests ~= 2.28.1',
  'python-socketio ~= 5.7.2',
  'websocket-client ~= 1.5.1'
]

[project.urls]
"Homepage" = "https://github.com/fireflyprotocol/firefly_exchange_client"
"Bug Reports" = "https://github.com/fireflyprotocol/firefly_exchange_client/issues"
"Source" = "https://github.com/fireflyprotocol/firefly_exchange_client/"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
